Menuをテーマに合わせる

--- a/assets/tmpl/include/admin/article/menu.html
+++ b/assets/tmpl/include/admin/article/menu.html
@@ -1,13 +1,6 @@
-            <div id="left-column">
-                <h3>記事</h3>
-                <ul class="nav">
-                    <li><a href="/article/">一覧</a></li>
-                    <li><a href="/article/add">追加</a></li>
-                </ul>
-                <h3>カテゴリー</h3>
-                <ul class="nav">
-                    <li><a href="/category/">一覧</a></li>
-                    <li><a href="/category/add">追加</a></li>
-                </ul>
-            </div>
-
+<div class="secondary-navigation">
+  <ul class="wat-cf">
+    <li class="first"><a href="/article/">List</a></li>
+    <li><a href="/article/add">Add</a></li>
+  </ul>
+</div>
